--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "bootstrap-vue": "^2.1.0",
     "core-js": "^3.8.3",
+    "numeral": "^2.0.6",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.7.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-e2e-cypress": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
@@ -24,10 +28,17 @@
     "@vue/test-utils": "^1.1.3",
     "@vue/vue2-jest": "^27.0.0-alpha.2",
     "babel-jest": "^27.0.6",
+    "bootstrap": "^4.3.1",
     "cypress": "^9.7.0",
     "jest": "^27.0.5",
+    "mutationobserver-shim": "^0.3.3",
+    "popper.js": "^1.16.0",
+    "portal-vue": "^2.1.6",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
     "stylus": "^0.55.0",
     "stylus-loader": "^6.1.0",
+    "vue-cli-plugin-bootstrap": "~0.4.0",
     "vue-template-compiler": "^2.6.14"
   },
   "browserslist": [
