--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/vue-fontawesome": "^2.0.10",
     "axios": "^1.7.2",
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.8.3",
