--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ node_modules
 
 # local env files
 .env.local
+.env
 .env.*.local
 
 # Log files
@@ -25,6 +26,3 @@ pnpm-debug.log*
 *.sln
 *.sw?
 
-
-# secret key (temporarily)
-/src/api/oauth.js
